compiler/tests/should-fail/UndefinedVariable1.via
/* UndefinedNameError */

fun main() {
    x = 1;
}
